--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -5,20 +5,22 @@
         </div>
         <ul>
             <% todos.each do |todo| %>
-                <li class="TodoItem">
-                    <label class="TodoItem-container">
-                        <input type="checkbox" class="TodoItem-checkbox">
-                        <%= todo.todo_text %>
+                <% if section_title = "Overdue" and todo.completed %>
+                    <li class="TodoItem">
+                        <label class="TodoItem-container">
+                            <input type="checkbox" class="TodoItem-checkbox">
+                            <%= todo.todo_text %>
 
-                        <% if show_due_date %>
-                        <p class="TodoItem-dueDate"><%= todo.due_date.to_formatted_s(:short) %> </p>
-                        <% end %>
-                        
-                        <a class="TodoItem-delete" href="javascript:void(0)">
-                            <img src="../../../trashcan.png">
-                        </a>
-                    </label>
-                </li>
+                            <% if show_due_date %>
+                            <p class="TodoItem-dueDate"><%= todo.due_date.to_formatted_s(:short) %> </p>
+                            <% end %>
+                            
+                            <a class="TodoItem-delete" href="javascript:void(0)">
+                                <img src="../../../trashcan.png">
+                            </a>
+                        </label>
+                    </li>
+                <% end %>
             <% end %>
         </ul>
     </section>
