--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -8,7 +8,13 @@
                 <% if section_title != "Overdue" || !todo.completed %>
                     <li class="TodoItem">
                         <label class="TodoItem-container">
-                            <input type="checkbox" class="TodoItem-checkbox" <%= todo.completed ? "checked": "" %>>
+                        <%= form_with(url: "/todos/#{todo.id}", method: "put") do %>
+                            <input type="checkbox" 
+                                    name="completed"
+                                    class="TodoItem-checkbox" 
+                                    onclick="this.form.submit()"
+                                    <%= todo.completed ? "checked": "" %> >
+                        <% end %>
                             <p style=<%= todo.completed ? "text-decoration:line-through": "" %>> <%= todo.todo_text %> </p>
 
                             <% if show_due_date %>
@@ -16,7 +22,7 @@
                             <% end %>
                             
                             <a class="TodoItem-delete" href="javascript:void(0)">
-                                <img src="../../../trashcan.png">
+                                <img src="/trashcan.png">
                             </a>
                         </label>
                     </li>
