Add ability to remove todo

--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -22,7 +22,9 @@
                             <% end %>
                             
                             <a class="TodoItem-delete" href="javascript:void(0)">
-                                <img src="/trashcan.png">
+                            <%= form_with(url: "/todos/#{todo.id}", method: "delete") do %>
+                                <input type="image" src="/delete.png" width="20px" height="20px"/>
+                            <% end %>
                             </a>
                         </label>
                     </li>
