--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<p>Welcome to homepage</p>
+<h1 class="Home-title">Welcome to Homepage</h1>
+<h3 class="Home-authenticate">If you are a new user <%= link_to "sign up here", new_user_path %></h3>
+<h3 class="Home-authenticate">If you are an existing user <%=link_to "sign-in here", new_sessions_path %></h3>
