--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
 
   <body>
     <% if @current_user %>
-      <p class="UserHeader"> <%= @current_user.first_name %></p>
+      <p class="UserHeader"> 
+        <%= @current_user.first_name %>
+        <%= link_to "Sign-out", "/signout", method: "delete" %>
+      </p>
     <% end %>
     <%= yield %>
   </body>
