--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -13,20 +13,20 @@
         <input type="date" class="AddTodo-date" name="due_date" />
         <input type="submit" class="AddTodo-button" value="Add" />
     </form>
-    
+ 
     <%= render partial: "todo-section", locals: {
         section_title: "Overdue",
-        todos: Todo.overdue,
+        todos: @todos.overdue,
         show_due_date: true
     } %>
     <%= render partial: "todo-section", locals: {
         section_title: "Due Today",
-        todos: Todo.due_today,
+        todos: @todos.due_today,
         show_due_date: false
     } %>
     <%= render partial: "todo-section", locals: {
         section_title: "Due Tommorow", 
-        todos: Todo.due_later,
+        todos: @todos.due_later,
         show_due_date: true
     } %>
 
